Fixed scrollbar

--- a/code/aedit.css
+++ b/code/aedit.css
@@ -102,12 +102,13 @@
 	left:0;
 	bottom:28px;	
 	width:100%;
-	height:100%;
+	-height:100%;
+    height:auto;
 	padding:8px 2px 8px 2px;
 	margin:0px;
 	background:black;
     color:white;
-	overflow:scroll;
+    overflow-y:scroll; 
 }
 
 #prjlist p {
